--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="pantone">#bdbebd</color>
     <color name="lightGreen">#90ee90</color>
     <color name="red">#ff0000</color>
+    <color name="grigioMezzoChiaro">#AAA0A0</color>
     <color name="gliglio_sculo">#3c3d3c</color>
     <color name="transparent">#00FFFFFF</color>
 
