--- a/app/src/main/res/layout/custom_dialog_layout.xml
+++ b/app/src/main/res/layout/custom_dialog_layout.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/testoCustom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
