--- a/app/src/main/res/layout/immagine_big.xml
+++ b/app/src/main/res/layout/immagine_big.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:alpha="0.4"
+        >
+
+    </RelativeLayout>
     <ImageView
         android:id="@+id/immagineIngrandita"
         android:layout_width="match_parent"
         android:layout_height="300dp"
 
+        android:layout_centerVertical="true"
         android:scaleType="fitCenter"
         android:src="@drawable/noimg"
         android:padding="20dp"/>
@@ -18,6 +27,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_close_24"
         android:background="@android:color/transparent"
+        android:layout_alignTop="@id/immagineIngrandita"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"/>
