-vedere se dalla homepage lasci solo il tastino per la visualizzazione dei dati 	e all'intero della pagina metti il tastino della modifica dei dati direttamente. (fatto)

--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -31,7 +31,21 @@
                 android:textStyle="bold"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="80px"></TextView>
+                android:textSize="80px">
+
+            </TextView>
+            <ImageView
+                android:id="@+id/editButton"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="0.1"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/edit"
+                android:background="@drawable/drawable_botton_white"
+                android:onClick="EditUtente"
+                >
+            </ImageView>
 
 
 
