--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -336,7 +336,7 @@
 
 
             <Button
-                android:id="@+id/ripristinaDatiButton"
+                android:id="@+id/creaSchedaButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -344,7 +344,7 @@
                 android:layout_weight="1"
                 android:textStyle="bold"
                 android:background="@drawable/drawable_scheda"
-                android:text="Azzera"
+                android:text="Crea Scheda"
                 android:textSize="15dp"></Button>
 
             <Button
@@ -377,7 +377,7 @@
                 android:textStyle="bold"
                 android:layout_weight="1"
                 android:background="@drawable/drawable_scheda"
-                android:text="Iniziamo"
+                android:text="Home"
                 android:textColor="@color/black"
                 android:textSize="15dp"></Button>
         </LinearLayout>
