--- a/app/src/main/res/layout/misure_dettaglio.xml
+++ b/app/src/main/res/layout/misure_dettaglio.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -8,11 +8,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="100dp"
+            >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginBottom="20dp"
             >
 
             <LinearLayout
@@ -408,6 +412,7 @@
 
 
         </LinearLayout>
+        </ScrollView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -441,4 +446,4 @@
     </RelativeLayout>
 
 
-</ScrollView>
+</RelativeLayout>
