--- a/app/src/main/res/layout/schede_pag3.xml
+++ b/app/src/main/res/layout/schede_pag3.xml
@@ -122,7 +122,7 @@
         </Button>
         <Button
             android:id="@+id/importaScheda"
-            android:onClick="ImportaScheda"
+            android:onClick="Importa"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -132,7 +132,7 @@
             android:textStyle="bold"
             android:layout_weight="0.5"
             android:background="@drawable/drawable_scheda"
-            android:text="Importa Scheda"
+            android:text="Importa"
             android:textColor="@color/black"
             android:textSize="15dp">
         </Button>
